src/style.css
@font-face {
	font-family: zig;
	src: url('./font/zig.ttf');
}
body {
	margin: 0;
	min-height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: black;
}

/* The game screen itself, aspect ratio 16:9 (set in index.ts) */
canvas {
	margin: auto;
	width: 99%;
}

input[type='number'] {
	width: 60px;
	font-family: zig;
	border: none;
	color: white;
	background-color: transparent;
}

main {
	position: relative;
}

.setting {
	z-index: 9;
	font-family: zig;
	position: absolute;
	top: 0;
	left: 0;
	padding: 4px 12px;
	color: white;
	background-color: rgb(56, 56, 56);
	transition-duration: 200ms;
}

.setting.off {
	transform: translateY(-100%);
}

.sp-controller {
	width: 99%;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	display: flex;
	justify-content: space-between;
	align-items: center;
}

#hideGUI {
	display: inline;
}

.toggle {
	position: absolute;
	left: 0;
	bottom: 0;
	bottom: -20px;
	color: white;
	border: none;
	background-color: transparent;
}

button[data-key]:active {
	background-color: rgba(255, 255, 255, 0.2);
}

.sp-controller button {
	color: white;
	border: 1px solid white;
	background-color: transparent;
}

.d-pad {
	margin-right: auto;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: repeat(3, 1fr);
	gap: 5px;
}

.d-pad button {
	font-size: 24px;
	width: 60px;
	height: 60px;
}

.d-pad button:first-child {
	grid-row: 2;
}

.d-pad button:nth-child(2) {
	grid-column: 2;
}

.d-pad button:nth-child(3) {
	grid-row: 2;
	grid-column: 3;
}

.d-pad button:last-child {
	grid-row: 3;
	grid-column: 2;
}

.key {
	z-index: 9;
	margin-left: auto;
}

.key button {
	font-family: zig;
	width: 132px;
	height: 86px;
}

@keyframes shake {
	0% {
		transform: translate(1px, 1px);
	}
	10% {
		transform: translate(-1px, -2px);
	}
	20% {
		transform: translate(-3px, 0);
	}
	30% {
		transform: translate(3px, 2px);
	}
	40% {
		transform: translate(1px, -1px);
	}
	50% {
		transform: translate(-1px, 2px);
	}
	60% {
		transform: translate(-3px, 1px);
	}
	70% {
		transform: translate(3px, 1px);
	}
	80% {
		transform: translate(-1px, -1px);
	}
	90% {
		transform: translate(1px, 2px);
	}
	to {
		transform: translate(1px, -2px);
	}
}

@media screen and (max-width: 440px) {
	main {
		height: 100vh;
	}

	input[type='range'] {
		height: 4px;
	}

	.setting {
		position: absolute;
		top: unset;
		bottom: 0;
		left: 0; /*left and right will stretch out the width*/
		right: 0;
		padding: 4px 12px;
		color: white;
		background-color: rgb(56, 56, 56);
		transition-duration: 200ms;
		font-size: 10px;
	}

	.setting.off {
		transform: translateY(100%);
	}

	.toggle {
		position: absolute;
		left: 0;
		bottom: unset;
		top: -20px;
		rotate: 180deg;
	}

	.sp-controller {
		width: 100%;
		position: absolute;
		top: 50%;
		transform: translateY(-50%);
		display: flex;
		justify-content: space-between;
		align-items: center;

		.d-pad {
			margin: auto;
		}
		.key {
			margin: auto;

			button {
				display: block;
			}
		}
	}
}

